[package]
name = "scheduler"
version = "0.2.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Various scheduler algorithms in a unified interface"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/scheduler"
documentation = "https://arceos-org.github.io/scheduler"

[dependencies]
linked_list_r4l = { git = "https://github.com/arceos-org/linked_list_r4l.git", branch = "guoweikang/add_push_front" }
